web app is ready

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,39 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html >
+
+<head>
+  <meta charset="UTF-8">
+  <title>Melbourn House Price Predection</title>
+  <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+
+  
+</head>
+
+<body>
+ <div class="login">
+	<h1>Melbourn House Price Prediction using Decision Tree ML Model</h1>
+
+     <!-- Main Input For Receiving Query to our ML -->
+    <form action="{{ url_for('predict')}}"method="post">
+        <input type="text" name="Rooms" placeholder="Rooms" value="@Request["inputText"]" required="required"  /><br>
+    	<input type="text" name="Bathroom" placeholder="Bathroom" required="required" /><br>
+        <input type="text" name="Landsize" placeholder="Landsize" required="required" /><br>
+        <input type="text" name="Lattitude" placeholder="Lattitude" required="required" /><br>
+        <input type="text" name="Longtitude" placeholder="Longtitude" required="required" /><br>
+             
+
+        <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
+    </form>
+
+   <br>
+   <br>
+  
+   
+ </div>
+ {{prediction_text}}
+
+</body>
+</html>
